# brum-brew-fest

./: .gitignore  README.md  cspell.json  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: deploy.yml
api/: Dockerfile.dev  Dockerfile.populate  Dockerfile.prod  README.md  pyproject.toml  ruff.toml
api/data/: venues.json
api/src/api/: classes.py  db.py  emails.py  main.py  populate.py  utils.py
api/src/api/templates/: forgot-password.txt  verify.txt
api/src/api/users/: auth.py  db.py  manager.py  schemas.py
client/: .prettierrc  Dockerfile.dev  Dockerfile.prod  entrypoint.dev.sh  next.config.ts  package.json
client/src/app/: Loader.tsx  Pin.tsx  TopBar.tsx  VenueList.tsx  VenueMap.tsx  api.ts  interfaces.ts  layout.tsx  page.tsx  utils.ts
client/src/app/components/: login.tsx
client/src/app/context/: data.tsx  user.tsx  userSummary.tsx  venue.tsx  venues.tsx
client/src/app/follows/: page.tsx
client/src/app/forgot/: page.tsx
client/src/app/login/: page.tsx
client/src/app/register/: page.tsx
client/src/app/reset/[token]/: page.tsx
client/src/app/user/account/: page.tsx
client/src/app/users/[userId]/: layout.tsx  page.tsx
client/src/app/users/account/: page.tsx
client/src/app/venue/[venueId]/: layout.tsx
client/src/app/venues/[venueId]/: layout.tsx  page.tsx
data/: populate.sh  venues.json
db/scripts/: 0_init.sql  1_types.sql  2_functions.sql  init.sql
db/updates/: 16-venue-update-script.sql  2-following-friends.sql  3-add-venue-areas  4_add_pin_locations.sql  add_venue_website.sql
setup/: .env
(+4 files in other folders)
