[project]
name = "api"
version = "0.1.0"
description = "Brum Brew Fest visit tracker"
authors = [{ name = "George Kaye", email = "georgejkaye@gmail.com" }]
license = { text = "GPL-v3.0-or-later" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.116.1,<0.117.0)", "uvicorn (>=0.35.0,<0.36.0)", "fastapi-users (>=14.0.1,<15.0.0)", "psycopg (>=3.2.9,<4.0.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
